--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
         /* Hero Section */
         .hero {
-            background-image: url('C:/Users/yash/OneDrive/Desktop/yash/Synzon india/DALL·E 2024-10-20 07.43.28 - A detailed scientific representation of leaves intertwined with molecular structures, designed for the nutraceutical industry with a different pattern.webp');
+            background-image: url('images/DALL·E 2024-10-20 07.43.28 - A detailed scientific representation of leaves intertwined with molecular structures, designed for the nutraceutical industry with a different pattern.webp');
             height: 100vh;
             background-size: cover;
             background-position: center;
@@ -235,10 +235,6 @@
             margin-right: 0;
             margin-left: 20px;
         }
-        /* Reduce the size of specific images */
-        .section:nth-child(4) img, .section:nth-child(6) img {
-            max-width: 30%;
-        }
         .section .content {
             max-width: 60%;
         }
@@ -279,7 +275,7 @@
 <!-- Navigation Bar -->
 <nav>
     <div class="logo-text">
-        <img src="C:/Users/yash/OneDrive/Desktop/yash/Synzon india/pixelcut-export.jpeg" alt="Synzon India Logo">
+        <img src="images/pixelcut-export.jpeg" alt="Synzon India Logo">
         <div class="separator"></div>
         <div class="company-name">
             <span class="synzon">Synzon</span>
@@ -322,15 +318,16 @@
 
 <!-- Content Sections with Images -->
 <div class="section">
-    <img src="C:/Users/yash/OneDrive/Desktop/yash/Synzon india/istockphoto-1297045731-612x612.jpg" alt="Welcome">
+    <img src="images/istockphoto-1829520432-612x612.jpg" alt="Welcome">
     <div class="content">
         <h2>Welcome to Synzon India</h2>
         <p>Welcome to Synzon India, your trusted partner in the nutraceutical industry. We are committed to providing exceptional services that help our clients meet their requirements for high-quality nutraceutical supplements and excipients. With a focus on excellence and innovation, we aim to be the leading facilitator in connecting businesses with top-tier products and solutions.</p>
     </div>
 </div>
 
+<!-- Additional Content Sections -->
 <div class="section">
-    <img src="C:/Users/yash/OneDrive/Desktop/yash/Synzon india/WhatsApp Image 2024-10-20 at 18.53.42_f975de3b.jpg" alt="Expertise">
+    <img src="images/istockphoto-1442009211-640x640.jpg" alt="Expertise">
     <div class="content">
         <h2>Our Expertise in Nutraceutical Solutions</h2>
         <p>At Synzon India, we specialize in bridging the gap between demand and supply in the nutraceutical sector. Our expertise lies in understanding the unique needs of our clients and delivering customized solutions that drive success. We offer a comprehensive range of products, including vitamins, minerals, herbal extracts, and specialty ingredients, ensuring that you have access to the finest quality supplements and excipients available in the market.</p>
@@ -338,7 +335,7 @@
 </div>
 
 <div class="section">
-    <img src="C:/Users/yash/OneDrive/Desktop/yash/Synzon india/istockphoto-1005952222-612x612.jpg" alt="Key Business Area">
+    <img src="images/istockphoto-807490932-612x612.jpg" alt="Key Business Area">
     <div class="content">
         <h2>Our Key Business Area</h2>
         <p>Our core focus is on connecting clients with the best products in the nutraceutical industry. We leverage our extensive network and deep industry knowledge to source premium ingredients that meet stringent quality standards. By collaborating closely with manufacturers and suppliers, we ensure that our clients receive products that are not only effective but also safe and compliant with international regulations.</p>
@@ -346,7 +343,7 @@
 </div>
 
 <div class="section">
-    <img src="C:/Users/yash/OneDrive/Desktop/yash/Synzon india/istockphoto-1498442212-612x612.jpg" alt="Strategic Partnerships">
+    <img src="images/istockphoto-1498442212-612x612.jpg" alt="Strategic Partnerships">
     <div class="content">
         <h2>Strategic Partnerships</h2>
         <p>We are proud to be associated with our esteemed partner company, M/S JOINT CO. LTD., based in China. Through this strategic alliance with various renowned manufacturers, we have access to a wide range of top-quality products to offer our clients. This partnership enhances our capability to provide competitive pricing, timely delivery, and a diverse product portfolio that meets the evolving needs of the nutraceutical industry.</p>
@@ -354,7 +351,7 @@
 </div>
 
 <div class="section">
-    <img src="C:/Users/yash/OneDrive/Desktop/yash/Synzon india/istockphoto-866525434-612x612.jpg" alt="Commitment to Quality">
+    <img src="images/istockphoto-866525434-612x612.jpg" alt="Commitment to Quality">
     <div class="content">
         <h2>Commitment to Quality and Service</h2>
         <p>At Synzon India, quality is at the heart of everything we do. We are dedicated to providing you with the best quality products, outstanding services, and competitive prices. Our team of experienced professionals works tirelessly to ensure customer satisfaction at every step. From product selection to after-sales support, we are committed to exceeding your expectations and building long-lasting relationships based on trust and reliability.</p>
@@ -362,7 +359,7 @@
 </div>
 
 <div class="section">
-    <img src="C:/Users/yash/OneDrive/Desktop/yash/Synzon india/istockphoto-1410938025-612x612.jpg" alt="Why Choose Us">
+    <img src="images/istockphoto-1410938025-612x612.jpg" alt="Why Choose Us">
     <div class="content">
         <h2>Why Choose Synzon India</h2>
         <ul>
