--- a/products.html
+++ b/products.html
@@ -242,7 +242,7 @@
 <!-- Navigation Bar -->
 <nav>
     <div class="logo-text">
-        <img src="images/pixelcut-export.jpeg" alt="Synzon India Logo">
+        <img src="images/pixelcut-export.jpeg" alt="Synzon India Logo"> <!-- Updated Image Path -->
         <div class="separator"></div>
         <div class="company-name">
             <span class="synzon">Synzon</span>
@@ -259,7 +259,7 @@
 <!-- Hero Video Section -->
 <div class="hero-video">
     <video autoplay muted loop>
-        <source src="video/vid_1.mp4" type="video/mp4">
+        <source src="video/vid_1.mp4" type="video/mp4"> <!-- Updated Video Path -->
         Your browser does not support the video tag.
     </video>
     <div class="content">
