--- a/products.html
+++ b/products.html
@@ -270,221 +270,30 @@
 
 <!-- Filter Bar -->
 <div class="filter-bar">
-    <a href="#joint-support" class="active">Joint Support</a>
-    <a href="#vitamins">Vitamins & Derivatives</a>
-    <a href="#herbal-extracts">Herbal Extracts</a>
-    <a href="#sport-nutrition">Sport Nutrition</a>
-    <a href="#protein">Protein</a>
-    <a href="#preservatives">Preservatives</a>
-    <a href="#sweeteners">Sweeteners</a>
-    <a href="#other-additives">Other Additives</a>
+    <button>Joint Support</button>
+    <button>Vitamins & Derivatives</button>
+    <button>Herbal Extracts</button>
+    <button>Sport Nutrition</button>
+    <button>Protein</button>
+    <button>Preservatives</button>
+    <button>Sweeteners</button>
+    <button>Other Additives</button>
 </div>
 
-<!-- Products Section -->
-<div class="products-section">
-
-    <!-- Joint Support Section -->
-    <div id="joint-support" class="product-category">
-        <h2>Joint Support</h2>
-        <div class="product-list">
-            <div class="product-item">
-                <h3>Coenzyme Q10</h3>
-                <p>Supports energy production and heart health, beneficial for joint health.</p>
-            </div>
-            <div class="product-item">
-                <h3>Chondroitin Sulfate</h3>
-                <p>Promotes cartilage health, joint cushioning, and reduces pain and inflammation.</p>
-            </div>
-            <div class="product-item">
-                <h3>D-Glucosamine HCl, Sulfate 2KCl/NaCl</h3>
-                <p>Essential for maintaining joint health and cartilage regeneration.</p>
-            </div>
-            <div class="product-item">
-                <h3>Collagen</h3>
-                <p>Supports the maintenance of connective tissue, cartilage health, and skin elasticity.</p>
-            </div>
-            <div class="product-item">
-                <h3>Methyl Sulfonyl Methane (MSM)</h3>
-                <p>Reduces inflammation and promotes joint flexibility and overall comfort.</p>
-            </div>
-            <div class="product-item">
-                <h3>Berberine hydrochloride</h3>
-                <p>Known for its anti-inflammatory properties, beneficial for metabolic health.</p>
-            </div>
-            <div class="product-item">
-                <h3>Artemisinin</h3>
-                <p>Extracted from sweet wormwood, known for its health benefits related to joint discomfort.</p>
-            </div>
-            <div class="product-item">
-                <h3>Inositol (Powder/Granular)</h3>
-                <p>Supports joint health and various metabolic functions in the body.</p>
-            </div>
-        </div>
+<!-- Products Grid -->
+<div class="products-grid">
+    <!-- Example Product Items -->
+    <div class="product-item">
+        <img src="images/example-product-1.jpg" alt="Coenzyme Q10"> <!-- Example image -->
+        <h3>Coenzyme Q10</h3>
+        <p>A key antioxidant that helps in energy production within the cells.</p>
     </div>
-
-    <!-- Vitamins & Derivatives Section -->
-    <div id="vitamins" class="product-category">
-        <h2>Vitamins & Derivatives</h2>
-        <div class="product-list">
-            <div class="product-item">
-                <h3>Vitamin A</h3>
-                <p>Supports vision, immune health, and skin health. Available as Acetate 325,000/500,000 IU/g, Palmitate 250,000 & 500,000 IU/g.</p>
-            </div>
-            <div class="product-item">
-                <h3>Vitamin B1 (Thiamine HCL/Mono)</h3>
-                <p>Essential for energy metabolism and proper nerve function. Promotes cardiovascular health.</p>
-            </div>
-            <div class="product-item">
-                <h3>Vitamin B5 (Calcium Pantothenate)</h3>
-                <p>Supports energy production and is vital for the synthesis of coenzyme A. Enhances skin health.</p>
-            </div>
-            <div class="product-item">
-                <h3>Vitamin B6 (Pyridoxine)</h3>
-                <p>Plays a role in over 100 enzyme reactions. Supports neurotransmitter synthesis and red blood cell formation.</p>
-            </div>
-            <div class="product-item">
-                <h3>Vitamin B9 (Folic Acid)</h3>
-                <p>Essential for DNA synthesis and repair. Available in concentrations 1%, 10%, and pure.</p>
-            </div>
-            <div class="product-item">
-                <h3>Vitamin B12 (Cyanocobalamine/Methylcobalamine)</h3>
-                <p>Supports nerve health and red blood cell production. Available in different variants.</p>
-            </div>
-            <div class="product-item">
-                <h3>Vitamin C (Ascorbic Acid)</h3>
-                <p>A powerful antioxidant that supports immune function, skin health, and overall well-being.</p>
-            </div>
-            <div class="product-item">
-                <h3>Vitamin H (D-Biotin)</h3>
-                <p>Plays a crucial role in supporting healthy hair, skin, and nails, and aids in metabolism regulation.</p>
-            </div>
-        </div>
+    <div class="product-item">
+        <img src="images/example-product-2.jpg" alt="Chondroitin Sulfate"> <!-- Example image -->
+        <h3>Chondroitin Sulfate</h3>
+        <p>Used for joint health, helps reduce inflammation and improve cartilage function.</p>
     </div>
-<!-- Herbal Extracts Section -->
-<div id="herbal-extracts" class="product-category">
-    <h2>Herbal Extracts</h2>
-    <div class="product-list">
-        <div class="product-item">
-            <h3>Ginkgo Biloba Extract</h3>
-            <p>Supports brain function, memory enhancement, and blood circulation.</p>
-        </div>
-        <div class="product-item">
-            <h3>Green Tea Extract</h3>
-            <p>Rich in antioxidants, promotes metabolism, weight loss, and overall wellness.</p>
-        </div>
-        <div class="product-item">
-            <h3>Bilberry Extract</h3>
-            <p>Enhances vision health, supports capillary health, and has antioxidant properties.</p>
-        </div>
-        <div class="product-item">
-            <h3>Black Currant Extract</h3>
-            <p>Contains antioxidants, supports immune health, and improves skin condition.</p>
-        </div>
-        <div class="product-item">
-            <h3>Milk Thistle Extract</h3>
-            <p>Supports liver health, detoxification, and helps maintain skin health.</p>
-        </div>
-        <div class="product-item">
-            <h3>Resveratrol (50%, 70%, 98%)</h3>
-            <p>A potent antioxidant that promotes cardiovascular health and anti-aging benefits.</p>
-        </div>
-    </div>
-</div>
-
-<!-- Sport Nutrition Section -->
-<div id="sport-nutrition" class="product-category">
-    <h2>Sport Nutrition</h2>
-    <div class="product-list">
-        <div class="product-item">
-            <h3>Taurine</h3>
-            <p>Supports cardiovascular health, energy levels, and muscle endurance.</p>
-        </div>
-        <div class="product-item">
-            <h3>Creatine Monohydrate</h3>
-            <p>Enhances athletic performance, increases muscle strength, and promotes muscle growth.</p>
-        </div>
-        <div class="product-item">
-            <h3>L-Glutamine</h3>
-            <p>Supports muscle recovery, immune function, and digestive health.</p>
-        </div>
-        <div class="product-item">
-            <h3>BCAA (L-Leucine, L-Isoleucine, L-Valine)</h3>
-            <p>Essential amino acids that promote muscle recovery, growth, and reduce fatigue.</p>
-        </div>
-        <div class="product-item">
-            <h3>L-Carnitine Variants</h3>
-            <p>Supports fat metabolism, energy production, and athletic performance.</p>
-        </div>
-        <div class="product-item">
-            <h3>L-Cysteine, L-Citrulline, L-Tyrosine, L-Arginine, L-Serine, Methionine, Tryptophan</h3>
-            <p>Essential amino acids that support muscle health, recovery, and overall well-being.</p>
-        </div>
-    </div>
-</div>
-
-<!-- Protein Section -->
-<div id="protein" class="product-category">
-    <h2>Protein</h2>
-    <div class="product-list">
-        <div class="product-item">
-            <h3>Hydrolyzed Protein (L-Cysteine HCL Anhydrous)</h3>
-            <p>Pre-digested protein that supports muscle growth, repair, and overall health.</p>
-        </div>
-        <div class="product-item">
-            <h3>Isolated Soy Protein</h3>
-            <p>A high-quality plant-based protein that is ideal for muscle maintenance and growth.</p>
-        </div>
-        <div class="product-item">
-            <h3>Pea Protein</h3>
-            <p>A vegan protein source rich in iron, supporting muscle growth and overall health.</p>
-        </div>
-    </div>
-</div>
-
-<!-- Preservatives Section -->
-<div id="preservatives" class="product-category">
-    <h2>Preservatives</h2>
-    <div class="product-list">
-        <div class="product-item">
-            <h3>Sodium Erythorbate</h3>
-            <p>Helps maintain freshness, prevents color change in foods, and acts as an antioxidant.</p>
-        </div>
-        <div class="product-item">
-            <h3>Potassium Sorbate</h3>
-            <p>Widely used to preserve freshness in food and beverages, prevents mold and yeast growth.</p>
-        </div>
-    </div>
-</div>
-
-<!-- Sweeteners Section -->
-<div id="sweeteners" class="product-category">
-    <h2>Sweeteners</h2>
-    <div class="product-list">
-        <div class="product-item">
-            <h3>Aspartame</h3>
-            <p>A low-calorie sweetener used to replace sugar in various food and beverages.</p>
-        </div>
-        <div class="product-item">
-            <h3>Acesulfame K</h3>
-            <p>A calorie-free sugar substitute used to add sweetness to drinks and baked goods.</p>
-        </div>
-        <div class="product-item">
-            <h3>Sucralose</h3>
-            <p>A zero-calorie sweetener that is heat-stable, making it ideal for cooking and baking.</p>
-        </div>
-    </div>
-</div>
-
-<!-- Other Additives Section -->
-<div id="other-additives" class="product-category">
-    <h2>Other Additives</h2>
-    <div class="product-list">
-        <div class="product-item">
-            <h3>Sodium/Calcium/Zinc Gluconate</h3>
-            <p>Used in various formulations to support mineral intake and enhance nutritional value.</p>
-        </div>
-    </div>
-</div>
+    <!-- Additional Products will follow the same pattern -->
 </div>
 
 <!-- Footer -->
