--- a/products.html
+++ b/products.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Synzon India - Our Products</title>
+    <title>Synzon India - Product Page</title>
     <!-- Google Fonts for Roboto and Crushed -->
     <link href="https://fonts.googleapis.com/css2?family=Crushed&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
@@ -15,16 +15,16 @@
         }
         body {
             font-family: Arial, sans-serif;
-            background-color: #ffffff; /* White background for a clean look */
+            background-color: #ffffff;
             color: #333;
         }
-        /* Navigation Bar - Same as Homepage */
+        /* Navigation Bar */
         nav {
-            background: #f7f7f7; /* Very light grey color for the navigation bar */
+            background: #f7f7f7; 
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 10px 20px; /* Adjusted padding for a better look */
+            padding: 10px 20px;
             position: fixed;
             width: 100%;
             top: 0;
@@ -33,44 +33,44 @@
         nav .logo-text {
             display: flex;
             align-items: center;
-            padding: 5px 10px; /* Adding padding for a neat look */
+            padding: 5px 10px;
             border-radius: 8px;
             animation: fadeIn 3s ease-in-out;
         }
         nav .logo-text img {
-            width: 40px; /* Adjusted logo size */
+            width: 40px;
             height: 40px;
-            margin-right: 10px; /* Reduced margin to bring closer to separator */
+            margin-right: 10px;
             transition: transform 0.3s ease;
             animation: slideIn 3s ease-in-out;
         }
         nav .logo-text img:hover {
-            transform: scale(1.5); /* Increased zoom for hover effect */
+            transform: scale(1.5); 
         }
         nav .separator {
             height: 50px;
             width: 2px;
-            background-color: #0E2841; /* Updated separator color */
+            background-color: #0E2841; 
             margin: 0 10px;
         }
         nav .logo-text .company-name {
             display: flex;
             flex-direction: column;
             align-items: flex-start;
-            font-family: 'Roboto', sans-serif; /* Changed to match the provided image font */
-            color: #0E2841; /* Updated font color */
+            font-family: 'Roboto', sans-serif;
+            color: #0E2841;
             animation: fadeIn 3s ease-in-out;
         }
         nav .company-name .synzon {
-            font-size: 24px; /* Adjusted font size for balance */
-            font-weight: bold;
-            text-transform: uppercase; /* Make it uppercase like in the image */
-        }
-        nav .company-name .india {
-            font-size: 20px; /* Slightly smaller for "India" */
+            font-size: 24px;
             font-weight: bold;
             text-transform: uppercase;
-            margin-top: -5px; /* Slight negative margin to bring "India" closer to "Synzon" */
+        }
+        nav .company-name .india {
+            font-size: 20px;
+            font-weight: bold;
+            text-transform: uppercase;
+            margin-top: -5px;
         }
         nav ul {
             display: flex;
@@ -81,13 +81,13 @@
             position: relative;
         }
         nav ul li a {
-            color: #333; /* Dark grey text for contrast on the light grey background */
+            color: #333;
             text-decoration: none;
-            font-size: 15px; /* Adjusted font size for better balance */
+            font-size: 15px;
             transition: color 0.3s ease;
         }
         nav ul li a:hover {
-            color: #0E2841; /* Change to provided blue shade on hover */
+            color: #0E2841;
         }
         nav ul li .dropdown-content {
             display: none;
@@ -121,119 +121,121 @@
             0% { opacity: 0; }
             100% { opacity: 1; }
         }
-
         @keyframes slideIn {
             0% { transform: translateX(-50px); }
             100% { transform: translateX(0); }
         }
 
-        /* Hero Video Section */
-        .hero-video {
+        /* Video Background Section */
+        .video-container {
             position: relative;
-            height: 100vh;
+            height: 80vh;
             overflow: hidden;
+            margin-top: 60px;
         }
-        .hero-video video {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            min-width: 100%;
-            min-height: 100%;
-            transform: translate(-50%, -50%);
-            z-index: 1;
+        .video-container video {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
-        .hero-video::before {
-            content: "";
+        .video-container .overlay {
             position: absolute;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.3); /* Adds a dark overlay on the video */
-            z-index: 2;
+            background: rgba(11, 47, 159, 0.3);
         }
-        .hero-video .content {
-            position: relative;
-            z-index: 3;
+        /* Animated Text Overlay */
+        .video-container .animated-text {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
             text-align: center;
             color: #ffffff;
-            top: 40%;
-            animation: fadeIn 5s ease-in-out;
+            font-family: 'Roboto', sans-serif;
+            z-index: 1;
+            animation: bounceIn 3s ease-in-out;
         }
-        .hero-video h1 {
+        .animated-text h1 {
             font-size: 50px;
             margin-bottom: 20px;
+            animation: bounceIn 2s ease-in-out;
         }
-        .hero-video p {
-            font-size: 22px;
-            margin-bottom: 20px;
+        .animated-text p {
+            font-size: 24px;
+            animation: slideUp 2s ease-in-out 1s;
         }
-
+        
         /* Filter Bar */
         .filter-bar {
+            background-color: #ffffff;
+            padding: 15px 20px;
             display: flex;
-            justify-content: center;
-            background-color: #f7f7f7; /* Very light grey background */
-            padding: 15px;
+            justify-content: space-around;
+            align-items: center;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            position: sticky;
+            top: 0;
+            z-index: 10;
         }
-        .filter-bar button {
-            background-color: #0B2F9F; /* Matching the color scheme */
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            margin: 0 5px;
-            cursor: pointer;
-            border-radius: 25px;
-            transition: background-color 0.3s ease;
+        .filter-bar a {
+            text-decoration: none;
+            color: #161D6F;
+            font-size: 18px;
+            font-weight: bold;
+            padding: 5px 10px;
+            transition: color 0.3s ease, border-bottom 0.3s ease;
+            border-bottom: 3px solid transparent;
         }
-        .filter-bar button:hover {
-            background-color: #0E2841; /* Darker blue on hover */
+        .filter-bar a:hover,
+        .filter-bar a.active {
+            color: #0B2F9F;
+            border-bottom: 3px solid #0B2F9F;
         }
-
-        /* Product Grid */
-        .products-grid {
+        
+        /* Products Section */
+        .products-section {
+            padding: 40px 20px;
+        }
+        .product-category {
+            margin-bottom: 40px;
+        }
+        .product-category h2 {
+            font-size: 32px;
+            color: #0E2841;
+            margin-bottom: 20px;
+        }
+        .product-list {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            grid-template-columns: repeat(4, 1fr);
             gap: 20px;
-            padding: 50px 20px;
         }
         .product-item {
-            text-align: center;
-            padding: 20px;
-            background-color: #ffffff;
+            background: #ffffff;
+            border: 1px solid #ddd;
             border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            padding: 20px;
+            transition: box-shadow 0.3s ease;
         }
         .product-item:hover {
-            transform: translateY(-10px);
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
         }
         .product-item img {
-            width: 100%;
-            max-height: 150px;
-            object-fit: cover;
+            max-width: 100%;
+            height: auto;
             border-radius: 5px;
-            margin-bottom: 15px;
         }
         .product-item h3 {
             font-size: 20px;
-            color: #0E2841; /* Color scheme to match the theme */
-            margin-bottom: 10px;
+            color: #0E2841;
+            margin: 15px 0 10px 0;
         }
         .product-item p {
-            font-size: 14px;
-            color: #666;
-        }
-
-        /* Footer */
-        footer {
-            background: #f7f7f7; /* Very light grey color for the footer */
+            font-size: 16px;
             color: #333;
-            padding: 10px; /* Reduced padding for a more compact footer */
-            text-align: center;
-            margin-top: 30px;
+            line-height: 1.5;
         }
     </style>
 </head>
@@ -242,7 +244,7 @@
 <!-- Navigation Bar -->
 <nav>
     <div class="logo-text">
-        <img src="images/pixelcut-export.jpeg" alt="Synzon India Logo"> <!-- Updated Image Path -->
+        <img src="images/pixelcut-export.jpeg" alt="Synzon India Logo">
         <div class="separator"></div>
         <div class="company-name">
             <span class="synzon">Synzon</span>
@@ -251,20 +253,21 @@
     </div>
     <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="#">Products</a></li>
+        <li><a href="#products">Products</a></li>
         <li><a href="#contact">Contact Us</a></li>
     </ul>
 </nav>
 
-<!-- Hero Video Section -->
-<div class="hero-video">
+<!-- Video Background Section -->
+<div class="video-container">
     <video autoplay muted loop>
-        <source src="videos/vid_1.mp4" type="video/mp4"> <!-- Updated Video Path -->
-        Your browser does not support the video tag.
+        <source src="videos/vid_1.mp4" type="video/mp4">
+        Your browser does not support HTML video.
     </video>
-    <div class="content">
-        <h1>Explore Our Premium Nutraceutical Products</h1>
-        <p>Your trusted partner in nutraceutical industry solutions</p>
+    <div class="overlay"></div>
+    <div class="animated-text">
+        <h1>Discover Our Quality Products</h1>
+        <p>Bringing You the Best Nutraceutical Solutions</p>
     </div>
 </div>
 
