--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <!-- Google Fonts for Roboto and Crushed -->
     <link href="https://fonts.googleapis.com/css2?family=Crushed&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+    <!-- Font Awesome for Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOM1te0w1dBw4kFWQu9zK5vAY5Wm8y1VslN9Rj" crossorigin="anonymous">
     <style>
         * {
             margin: 0;
@@ -274,6 +276,7 @@
 
 <!-- Navigation Bar -->
 <nav>
+    <nav id="navbar">
     <div class="logo-text">
         <img src="images/pixelcut-export.jpeg" alt="Synzon India Logo">
         <div class="separator"></div>
@@ -283,9 +286,9 @@
         </div>
     </div>
     <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
         <li>
-            <a href="#">Products &#9662;</a>
+            <a href="#"><i class="fas fa-box"></i> Products &#9662;</a>
             <ul class="dropdown-content">
                 <li><a href="products.html#joint-support">Joint Support</a></li>
                 <li><a href="products.html#vitamins">Vitamins & Derivatives</a></li>
@@ -297,7 +300,7 @@
                 <li><a href="products.html#other-additives">Other Additives</a></li>
             </ul>
         </li>
-        <li><a href="#contact">Contact Us</a></li>
+        <li><a href="#contact"><i class="fas fa-envelope"></i> Contact Us</a></li>
     </ul>
 </nav>
 
